build: enforce the Java baseline with --release 11
-source/-target 11 does not restrict the API surface, so a newer JDK
silently accepts newer APIs and only a CI job on the older JDK rejects
them. That is how 141 Java 9+ call sites accumulated unnoticed. Set
options.release as a convention so it is actually enforced, and let the
modules that need more override it:

- file: 17, for jdk.incubator.vector (first shipped in 16)
- askamerica-engine: 21, or javac cannot read smile's Java 21 class files
- trino-*: already 25

Fallout fixed rather than worked around:

- --release applies lints that cross-compiling with -source 8 suppressed.
  dep-ann fires on the javacc-generated SimpleCharStream, which cannot be
  edited, so disable that one lint; govdata's real occurrence gets the
  @Deprecated annotation its javadoc already claimed.
- Kotlin in core and testkit still targeted 1.8, which Gradle rejects as
  inconsistent with the Java target. Both now 11.
- trino-calcite's test source set compiled against the Calcite API without
  depending on it; it built only because nothing enforced the boundary.
  Add the core and linq4j test dependencies. This was already failing
  before this change.

CLAUDE.md rule 1 now names the modules the Java 8 rule still binds and the
exceptions already on 11+, since no JDK 8 job enforces it any more.

Verified: compileJava + compileTestJava across every module, and
autostyleCheck + rat, all pass.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>